[package]
name = "chain"
version = "0.1.0"
authors = ["Felix Viernickel <f.viernickel@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.2"
blake2 = "0.9"
chrono = "*"

[lib]
name = "chainlib"
path = "src/lib.rs"

[[bin]]
name = "chain"
path = "src/main.rs"
